[gd_scene load_steps=9 format=2]

[ext_resource path="res://Project/UI/Screens/ControlsSettingsScreen/ControlsSettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansBold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Project/Resources/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Project/UI/Components/Animated_dialog_button/AnimatedDialogButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Project/UI/Screens/ControlsSettingsScreen/Components/KeyBindButton/KeyBindButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Project/UI/Screens/ControlsSettingsScreen/Components/InputMapper/InputMapper.tscn" type="PackedScene" id=6]
[ext_resource path="res://Project/UI/Screens/ControlsSettingsScreen/Components/RemapSplashScreen/RemapSplashScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Project/UI/Screens/ControlsSettingsScreen/KeyButtonsContainer.gd" type="Script" id=8]

[node name="ControlsSettingsScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InputMapper" parent="." instance=ExtResource( 6 )]

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
color = Color( 0.0941176, 0.0784314, 0.168627, 0.509804 )

[node name="SettingsMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
custom_constants/margin_right = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MainMarginContainer/SettingsMarginContainer"]
margin_left = 25.0
margin_right = 487.0
margin_bottom = 265.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer"]
margin_right = 450.242
margin_bottom = 313.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="HeaderContainer" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 55.0

[node name="PanelContainer" type="MarginContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/HeaderContainer"]
margin_right = 450.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/HeaderContainer"]
margin_top = 29.0
margin_right = 450.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "Управление"

[node name="KeyButtonsContainer" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 100.0
margin_bottom = 238.0
size_flags_horizontal = 0
script = ExtResource( 8 )
scroll_container_path = NodePath("../..")

[node name="MoveTopKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 14.0
button_text = "Движение вверх"
key_action_title = "up"

[node name="MoveLeftKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
button_text = "Движение влево"
key_action_title = "left"

[node name="MoveBottomKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 100.0
margin_bottom = 50.0
button_text = "Движение вниз"
key_action_title = "down"

[node name="MoveRightKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 100.0
margin_bottom = 68.0
button_text = "Движение вправо"
key_action_title = "right"

[node name="JumpKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 100.0
margin_bottom = 86.0
button_text = "Прыжок"
key_action_title = "jump"

[node name="ActionKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 100.0
margin_bottom = 104.0
button_text = "Действие"
key_action_title = "Interaction"

[node name="AttackKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 100.0
margin_bottom = 122.0
button_text = "Атака"
key_action_title = "Attack"

[node name="PauseKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 100.0
margin_bottom = 140.0
button_text = "Пауза"
key_action_title = "pause_menu"

[node name="DebugScreenKeyButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/KeyButtonsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 100.0
margin_bottom = 158.0
button_text = "Экран отладки"
key_action_title = "debug_screen"

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 263.0
margin_right = 450.0
margin_bottom = 313.0

[node name="OptionButton" type="OptionButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2"]
margin_right = 450.0
margin_bottom = 14.0
text = "Профиль: Клавиатура"

[node name="ProfileHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 450.0
margin_bottom = 14.0

[node name="KeyboardModAnimatedDialogButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2/ProfileHBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 14.0
toggle_mode = true
pressed = true
text = "Клавиатура"

[node name="JoysticModAnimatedDialogButton2" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2/ProfileHBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 112.0
margin_bottom = 14.0
toggle_mode = true
text = "Джойстик"

[node name="ResetControlSettingsButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 108.0
margin_bottom = 32.0
size_flags_horizontal = 0
text = "Сбросить настройки"
align = 0

[node name="ExitButton" parent="MainMarginContainer/SettingsMarginContainer/ScrollContainer/VBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 24.0
margin_bottom = 50.0
size_flags_horizontal = 0
text = "exit"
align = 0

[node name="RemapSplashScreenMarginContainer" parent="MainMarginContainer" instance=ExtResource( 7 )]
